# ee3espfinal

./: .gitignore  et --hard e91181e  idf_component.yml  partitions.csv
main/: CMakeLists.txt  Untitled2.c  esp_http_client_example.c  esp_http_client_example.h  example1.c  idf_component.yml  kul.c  lcd_display_task.c  lcd_display_task.h  lvgl_demo_ui.c  lvgl_demo_ui.h  main.c  rgb_lcd_example_main.h  room1_token.c
